--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -10,7 +10,7 @@
 		<param-name>contextConfigLocation</param-name>
 		<param-value>		  	
 			classpath:applicationContext.xml
-			/WEB-INF/spring-security.xml
+			/WEB-INF/spring-security.xml					
     	</param-value>
 	</context-param>
 
@@ -34,7 +34,7 @@
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 
-	<!-- servlet for webservices -->
+	<!-- servlet for webservices  -->
 	<servlet>
 		<servlet-name>app</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -47,4 +47,8 @@
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
+	
+	<session-config>
+	  <session-timeout>15</session-timeout>
+	</session-config>	
 </web-app>
